Fixed styling on mobile.

--- a/src/style.sass
+++ b/src/style.sass
@@ -421,29 +421,29 @@ h2
 .bio-cir-one
     right: -5px
     height: 77px
-    top: 30px
+    top: 15px
     border-color: $teal
     transform: rotate(2deg)
     @media screen and ( max-width: $default )
         right: 18px
     @media screen and ( max-width: $lgmobile )
-        right: 5px
+        right: 36px
     @media screen and ( min-width: $lgmobile )
         right: 26px
         top: 26px
     @media screen and ( min-width: 525px )
         right: 135px
     @media screen and ( min-width: 600px )
-        right: 160px
+        right: 134px
     @media screen and ( min-width: 750px )
         left: 45px
         right: unset
         top: -15px
     @media screen and ( max-width: $mobile )
-        right: 5px
+        right: -39px
 
 .bio-cir-two
-    top: 35px
+    top: 21px
     right: 8px
     height: 60px
     transform: rotate(3deg)
@@ -453,20 +453,20 @@ h2
     @media screen and ( max-width: $tablet )
         right: 0px
     @media screen and ( max-width: $lgmobile )
-        right: 5px
+        right: 41px
     @media screen and ( min-width: $lgmobile )
         right: 26px
         top: 35px
     @media screen and ( min-width: 525px )
         right: 130px
     @media screen and ( min-width: 600px )
-        right: 155px
+        right: 134px
     @media screen and ( min-width: 750px )
         left: 45px
         right: unset
         top: -7px
     @media screen and ( max-width: $mobile )
-        right: 7px
+        right: -29px
 
 .by-experience, .at-heart
     color: $primary-purple
@@ -706,7 +706,7 @@ h2
         align-items: center
         text-align: center
         min-width: unset
-        width: 90vw
+        width: 90%
 
 .info-box-one
     border: $secondary-purple 1px solid
